--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "php": ">=5.5.9",
         "guzzlehttp/guzzle": "^6.3",
-        "illuminate/container": "^5.1"
+        "illuminate/container": "^5.1",
+        "illuminate/support": "^5.1"
     }
 }
