--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
         "guzzlehttp/guzzle": "^6.3",
         "illuminate/container": "^5.1",
         "illuminate/support": "^5.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^4.8"
     }
 }
