更新 composer.json

--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,15 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8"
+    },
+    "autoload": {
+        "psr-4": {
+            "TimSDK\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "TimSDK\\Tests\\": "tests/"
+        }
     }
 }
