--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=5.5.9",
         "guzzlehttp/guzzle": "^6.3",
         "illuminate/container": "^5.1",
-        "illuminate/support": "^5.1"
+        "illuminate/support": "^5.1",
+        "illuminate/log": "^5.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8"
