--- a/composer.json
+++ b/composer.json
@@ -13,16 +13,19 @@
         "php": ">=5.5.9",
         "guzzlehttp/guzzle": "^6.3",
         "illuminate/container": "^5.1",
-        "illuminate/support": "^5.1",
         "illuminate/log": "^5.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8"
+        "phpunit/phpunit": "^4.8",
+        "mockery/mockery": "^0.9"
     },
     "autoload": {
         "psr-4": {
             "TimSDK\\": "src/"
-        }
+        },
+        "files": [
+            "src/Support/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
