--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=5.5.9",
         "guzzlehttp/guzzle": "^6.3",
         "illuminate/container": "^5.1",
-        "illuminate/log": "^5.1"
+        "monolog/monolog": "^1.0",
+        "pimple/pimple": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
@@ -24,7 +25,7 @@
             "TimSDK\\": "src/"
         },
         "files": [
-            "src/Support/helpers.php"
+            "src/Support/Helpers.php"
         ]
     },
     "autoload-dev": {
