--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
-        "mockery/mockery": "^0.9"
+        "mockery/mockery": "^0.9",
+        "overtrue/phplint": "^1.1"
     },
     "autoload": {
         "psr-4": {
