--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     },
     "scripts": {
         "post-install-cmd": [
-            "@php -r \"file_exists('phpunit.xml.dist') || copy('phpunit.xml.dist', 'phpunit.xml');\""
+            "@php -r \"file_exists('phpunit.xml') || copy('phpunit.xml.dist', 'phpunit.xml');\""
         ]
     }
 }
