--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require-dev": {
         "phpunit/phpunit": "^4.8",
         "mockery/mockery": "^0.9",
-        "overtrue/phplint": "^1.1"
+        "overtrue/phplint": "^1.1",
+        "symfony/var-dumper": "^3.4"
     },
     "autoload": {
         "psr-4": {
