--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,6 +14,16 @@
             <directory>./tests/</directory>
         </testsuite>
     </testsuites>
+    <filter>
+        <whitelist>
+            <directory suffix=".php">src/</directory>
+            <exclude>
+                <directory suffix="ServiceProvider.php">./src/Foundation/ServiceProviders</directory>
+                <directory suffix="Exception.php">./src/Core</directory>
+                <directory>./src/Support</directory>
+            </exclude>
+        </whitelist>
+    </filter>
     <php>
         <const name="PHPUNIT_RUNNING" value="true" />
         <const name="APP_ID" value="" />
