--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "phpunit/phpunit": "^4.8",
         "mockery/mockery": "^0.9",
         "overtrue/phplint": "^1.1",
-        "symfony/var-dumper": "^3.4"
+        "symfony/var-dumper": "^3.4",
+        "barryvdh/reflection-docblock": "^2.0"
     },
     "autoload": {
         "psr-4": {
