test(phpunit.xml.dist): update phpunit configurate file.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -18,9 +18,10 @@
         <whitelist>
             <directory suffix=".php">src/</directory>
             <exclude>
-                <directory suffix="ServiceProvider.php">./src/Foundation/ServiceProviders</directory>
                 <directory suffix="Exception.php">./src/Core</directory>
                 <directory>./src/Support</directory>
+                <directory>./src/Foundation/ServiceProviders</directory>
+                <directory>./src/Core/ServiceProviders</directory>
             </exclude>
         </whitelist>
     </filter>
