perf(\TimSDK\Support\Helpers.php to \TimSDK\helpers.php): change helper functions to named by namesp

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
             "TimSDK\\": "src/"
         },
         "files": [
-            "src/Support/Helpers.php"
+            "src/helpers_include.php"
         ]
     },
     "autoload-dev": {
