--- a/composer.json
+++ b/composer.json
@@ -6,21 +6,22 @@
     "authors": [
         {
             "name": "JimChen",
-            "email": "18219111672@163.com"
+            "email": "imjimchen@163.com"
         }
     ],
     "require": {
-        "php": ">=5.5.9",
-        "guzzlehttp/guzzle": "^6.3",
-        "monolog/monolog": "^1.0",
-        "pimple/pimple": "^3.0"
+        "php": ">=7.2",
+        "ext-json": "*",
+        "guzzlehttp/guzzle": "^6.0 || ^7.0",
+        "monolog/monolog": "^1.0 || ^2.0",
+        "pimple/pimple": "^1.0 || ^2.0 || ^3.0",
+        "symfony/http-foundation": "^3.0 || ^4.0 || ^5.0",
+        "symfony/cache": "^3.0 || ^4.0 || ^5.0",
+        "psr/simple-cache": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8",
-        "mockery/mockery": "^0.9",
-        "overtrue/phplint": "^1.1",
-        "symfony/var-dumper": "^3.4",
-        "barryvdh/reflection-docblock": "^2.0"
+        "phpunit/phpunit": "^8.0",
+        "mockery/mockery": "^1.0"
     },
     "autoload": {
         "psr-4": {
