--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,16 @@
     "require": {
         "php": ">=7.2",
         "ext-json": "*",
-        "guzzlehttp/guzzle": "^6.0 || ^7.0",
+        "ext-curl": "*",
         "monolog/monolog": "^1.0 || ^2.0",
         "pimple/pimple": "^1.0 || ^2.0 || ^3.0",
         "symfony/http-foundation": "^3.0 || ^4.0 || ^5.0",
         "symfony/cache": "^3.0 || ^4.0 || ^5.0",
         "psr/simple-cache": "^1.0",
-        "symfony/event-dispatcher": "^5.3"
+        "psr/http-client": "^1.0",
+        "symfony/event-dispatcher": "^5.3",
+        "nyholm/psr7": "^1.4",
+        "guzzlehttp/guzzle": "^6.5 || ^7.0",
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
