--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "pimple/pimple": "^1.0 || ^2.0 || ^3.0",
         "symfony/http-foundation": "^3.0 || ^4.0 || ^5.0",
         "symfony/cache": "^3.0 || ^4.0 || ^5.0",
-        "psr/simple-cache": "^1.0"
+        "psr/simple-cache": "^1.0",
+        "symfony/event-dispatcher": "^5.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
