--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "psr/http-client": "^1.0",
         "symfony/event-dispatcher": "^5.3",
         "nyholm/psr7": "^1.4",
-        "guzzlehttp/guzzle": "^6.5 || ^7.0",
+        "guzzlehttp/guzzle": "^6.5 || ^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
