--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
-        "mockery/mockery": "^1.0"
+        "mockery/mockery": "^1.0",
+        "laravel/framework": "^6.0 || ^7.0 || ^8.0 || ^9.0"
     },
     "autoload": {
         "psr-4": {
@@ -35,6 +36,11 @@
     "autoload-dev": {
         "psr-4": {
             "TimSDK\\Tests\\": "tests/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": ["TimSDK\\Laravel\\ServiceProvider"]
         }
     }
 }
