--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
         "pimple/pimple": "^1.0 || ^2.0 || ^3.0",
         "symfony/http-foundation": "^3.0 || ^4.0 || ^5.0",
         "symfony/cache": "^3.0 || ^4.0 || ^5.0",
+        "symfony/event-dispatcher": "^4.0 || ^5.0",
         "psr/simple-cache": "^1.0",
         "psr/http-client": "^1.0",
-        "symfony/event-dispatcher": "^5.3",
         "nyholm/psr7": "^1.4",
         "guzzlehttp/guzzle": "^6.5 || ^7.0"
     },
