--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         "symfony/event-dispatcher": "^4.0 || ^5.0",
         "psr/simple-cache": "^1.0",
         "psr/http-client": "^1.0",
-        "nyholm/psr7": "^1.4",
-        "guzzlehttp/guzzle": "^6.5 || ^7.0"
+        "guzzlehttp/guzzle": "^6.5 || ^7.0",
+        "guzzlehttp/psr7": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
