--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "psr/simple-cache": "^1.0",
         "psr/http-client": "^1.0",
         "guzzlehttp/guzzle": "^6.5 || ^7.0",
-        "guzzlehttp/psr7": "^2.0"
+        "guzzlehttp/psr7": "^1.6 || ^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
