--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@ LICENSE                export-ignore
 .gitattributes         export-ignore
 /.github/              export-ignore
 .gitignore             export-ignore
-.php_cs.dist           export-ignore
+.php_cs                export-ignore
+.php-cs-fixer.php      export-ignore
 /phpunit.xml.dist      export-ignore
 /tests/                export-ignore
